--- a/lesson 5/css/style.css
+++ b/lesson 5/css/style.css
@@ -6,13 +6,12 @@
 
 
 
-
 header {
     width: 100vw;
-    height: 4rem;
     background-color: rgb(20, 42, 144);
     display: flex;
     justify-content: center;
+    height: auto;
 }
 
 .container {
@@ -24,6 +23,7 @@ header {
     justify-content: space-between;
     height: 100%;
     background-color: rgb(20, 42, 144);
+
 }
 
 .content > div {
@@ -43,11 +43,15 @@ header {
 }
 
 .icon {
-    width: 2rem;
-    height: 2rem;
+    margin: 4px;
+    width: 1.5rem;
+    height: 1.5rem;
     background-color: rgb(20, 42, 144);
     border-radius: 4px;
 }
+
+
+/* -----header------ */
 
 nav {
     display: flex;
@@ -77,9 +81,20 @@ nav {
     border-radius: 1rem;
 }
 
+@media (max-width:900px){
+    .logo{
+        width: 20%;
+    }
+}
+@media (max-width:500px){
+    .logo{
+        width: 40%;
+    }
+}
+
 .nav__buttons {
     display: flex;
-    height: 4rem;
+    height: 100%;
     justify-content: center;
     align-items: center;
     background: rgb(49, 219, 241);
@@ -87,15 +102,34 @@ nav {
     gap: 1rem;
 }
 
+
 .buttons {
+    margin: .5rem;
     width: 4.5rem;
-    height: 1rem;
     background-color: rgb(20, 42, 144);
     border-radius: 2rem;
     color: white;
     padding: 0.5rem;
     text-align: center;
+
 }
+@media (max-width:650px){
+
+    .nav__buttons{
+        flex-direction: column;
+        gap: 0;
+    }
+    .buttons {
+        margin: 0;
+        width: 100%;
+        border-radius: 0;
+        border: 1px solid rgb(49, 219, 241);
+    }
+}
+
+
+/* -----nav------ */
+
 
 .news__cards {
     margin-top: 30px;
@@ -104,6 +138,9 @@ nav {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
 }
+
+
+
 
 .card {
     box-sizing: border-box;
@@ -123,6 +160,23 @@ nav {
     border-radius: 2em;
 }
 
+@media (max-width: 900px) {
+    .news__cards{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+    .card{
+        width: 60%
+    }
+
+}
+
+
+/* -----products----- */
+
+
 .products {
     width: 100vw;
     display: flex;
@@ -136,6 +190,28 @@ nav {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 13rem 13rem;
     gap: 4rem 4rem;
+}
+
+@media (max-width: 900px) {
+    .products__grid {
+        width: 60%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 10rem 10rem 10rem;
+        gap: 3rem 4rem;
+        column-gap: 3rem;
+        row-gap: 3rem;
+    }
+
+}
+@media (max-width:450px){
+    .products__grid {
+        width: 70%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 7rem) ;
+        row-gap: .5rem;
+    }
 }
 
 .product {
@@ -162,16 +238,60 @@ nav {
 }
 
 .person_content {
-    width: 60%;
+    width: 70%;
     display: flex;
     justify-content: space-between;
     background: rgb(20, 42, 144);
+    margin-top: 10px;
 }
+
+@media (max-width: 1200px){
+    .person_content {
+        width: 80%;
+    }
+}
+
+@media (max-width: 1000px){
+    .person_content {
+        width: 90%;
+    }
+}
+
+@media (max-width: 900px){
+    .person_content {
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        background: rgb(20, 42, 144);
+    }
+    .person__infomation {
+        width: 100vw;
+        background: rgb(20, 42, 144);
+        margin-top: 10px;
+        height: 100%;
+    }
+
+    .person__foto {
+        margin: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem;
+        box-sizing: border-box;
+        background: rgb(20, 42, 144);
+    }
+    .person__cards {
+        overflow: hidden;
+    }
+}
+
 
 .person__foto {
     margin: 30px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
     padding: 2rem;
     border-right: 1px solid rgb(49, 219, 241);
@@ -191,12 +311,17 @@ nav {
     background: rgb(20, 42, 144);
     box-sizing: border-box;
     overflow: scroll;
+    overflow-x: hidden;
 }
+
+
+
 
 .info_container {
     margin: 2rem;
     background: rgb(20, 42, 144);
 }
+
 
 .about__person {
     display: flex;
@@ -206,6 +331,7 @@ nav {
     border: 1px solid rgb(49, 219, 241);
     padding: 1rem;
 }
+
 
 .preson__ft {
     width: 10rem;
@@ -223,6 +349,19 @@ nav {
     background: rgb(20, 42, 144);
     color: aliceblue;
 }
+@media (max-width: 510px){
+    .about__person{
+        flex-direction: column;
+        align-items: center;
+    }
+    .person__inf{
+        width: 100%;
+    }
+    .preson__ft{
+        width: 8rem;
+        height: 8rem;
+    }
+}
 
 .user__desc{
     width: 100vw;
@@ -238,6 +377,16 @@ nav {
     gap: 1rem;
 }
 
+@media (max-width: 1200px){
+    .all__user__info{
+        width: 70%;
+        display: flex;
+        flex-direction:column;
+        align-items:center;
+        gap: 1rem;
+    }
+}
+
 
 .information{
     display: flex;
@@ -248,13 +397,19 @@ nav {
     border: 1px solid rgb(49, 219, 241)
 }
 
-.user__avatar{
+.wrapper_user__avatar{
     width: 6rem;
-    height: 6rem;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+.user__avatar{
+    width: 5rem;
+    height: 5rem;
     background-color: rgb(20, 42, 144);
     border-radius: 50%;
     margin: 1rem;
-
 }
 
 .user__bio {
@@ -274,6 +429,43 @@ nav {
     border-radius: 30px;
 }
 
+
+@media (max-width: 1200px){
+    .short__info {
+        display:flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 1rem;
+        box-sizing: border-box;
+    }
+    .short__information:nth-child(3){
+        background-color: rgb(49, 219, 241);
+        margin: 0;
+        text-align: center;
+        border-radius: 30px;
+        color: rgb(20, 42, 144);
+    }
+}
+
+.short__information{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    border-bottom: 2px solid rgb(49, 219, 241);
+}
+.short__information:nth-child(3){
+    background-color: rgb(49, 219, 241);
+    margin: 0;
+    text-align: center;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    color: rgb(20, 42, 144);
+}
+
+
+
 .short__information{
     margin: 10px;
     display: flex;
@@ -292,4 +484,64 @@ nav {
     border-bottom-left-radius: 30px;
     text-align: center;
     color: rgb(20, 42, 144);
+}
+
+@media (max-width: 500px){
+    .short__info{
+        display: grid;
+        grid-template-columns:1fr;
+    }
+}
+
+footer {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(20, 42, 144);
+}
+
+.footer__wrapper{
+    width: 70vw;
+    height: 5rem;
+    display: flex;
+    justify-content:space-between;
+    background-color: rgb(20, 42, 144);
+}
+
+.link__icons{
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: rgb(20, 42, 144);
+    border-radius: .5rem;
+    cursor: pointer;
+    margin: 3px;
+}
+
+.footer__links{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    width: 6%;
+    justify-content:center;
+    background-color: rgb(49, 219, 241)
+}
+
+.links__box{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    background-color: rgb(49, 219, 241);
+    height: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.footer__info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(49, 219, 241);
+    background-color: rgb(20, 42, 144);
+    font-size: 1.2rem;
 }
