--- a/lesson 6/css/style.css
+++ b/lesson 6/css/style.css
@@ -387,6 +387,7 @@ header{
     font-size: 24px;
     line-height: 33px;
     color: #FFFFFF;
+    height: 90%;
 }
 
 .banner__btn{
@@ -503,9 +504,125 @@ header{
     color: #FFFFFF;
 }
 
+.customer__respons{
+    background-color: #E6E5E5;
+}
+
+.response__container{
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    align-items: center;
+}
+
+.response__p{
+    font-family: Open Sans;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    color: #000000;
+    text-align: center;
+    width: 65%;
+}
+
+.customer{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
 
 
+.response__container h3{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    color: #000000;
+}
 
 
+.response__container h4 {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    color: #000000;
+    padding-bottom: 100px;
+}
 
+.gallary h2{
+    padding-top: 60px;
+    padding-bottom: 40px;
+    font-family: Tinos;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 54px;
+    line-height: 62px;
+    color: #000000;
+    text-align: center;
+}
 
+.grid__menu{
+    display: grid;
+    grid-template-columns: repeat(2, 540px);
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 30px;
+    justify-content: center;
+    align-content: center;
+}
+
+.grid__menu > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.box{
+    width: 30px;
+    height: 100px;
+    background-color: #ec3e3e;
+}
+
+.boxes{
+    display: flex;
+    justify-content: space-between;
+}
+
+.worker > h2 {
+    font-family: Tinos;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 54px;
+    line-height: 62px;
+    color: #000000;
+    margin-top: 100px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.worker__foto{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.footer__img{
+    margin-top: 150px;
+    background: url("../img/st-826688_1920 1.png")  no-repeat center/cover;
+    height: 100vh;
+}
+
+.hamb__desc{
+    font-family: Tinos;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 30px;
+    color: #000000;
+}
