--- a/first project/css/style.css
+++ b/first project/css/style.css
@@ -243,7 +243,7 @@ header{
     height: 3px;
     background-color: #ffffff;
 }
-.button{
+.button-c{
     display: flex;
     column-gap: 1rem;
     background-color: #005BB9;
@@ -415,7 +415,8 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 1rem;
+    margin-left: 2rem;
+    row-gap: 4rem;
 }
 
 .bn__card1 {
@@ -539,7 +540,7 @@ header{
 .catalog__buttons {
     display: flex;
     column-gap: 1rem;
-    text-align: center;
+    align-items: center;
     margin: 3rem 0;
 }
 
@@ -802,7 +803,6 @@ footer {
     height: 100%;
     margin-left: -4px;
     height: 2.1rem;
-    width: 9rem;
     cursor: pointer;
 }
 
@@ -822,5 +822,25 @@ footer {
     font-size: 16px;
     line-height: 20px;
     color: #737E9B;
-    padding: 1rem 0 ;
+    padding: 1rem 1rem;
+    display: flex;
+    justify-content: center;
+}
+
+.media {
+    display: none;
+}
+
+.media_whatsapp {
+    display: flex;
+    column-gap: 2rem;
+    align-items: center;
+}
+
+.serch_img {
+    display: none;
+}
+
+.media__buttons {
+    display: none;
 }
